--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
-body {
-    color: blueviolet;
+.container {
+    border: 1px solid slategray;
+    width: 80%;
+    margin: 30px 10%;
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
