--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,10 @@
     margin: 30px 10%;
     text-align: center;
 }
+
+.container header {
+    background-color: blue;
+    color: white;
+    width: 100%;
+    height: 50px;
+}
