--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,9 @@
     margin: 30px 10%;
     text-align: center;
 }
+
+.container p {
+    font-family: Arial, Helvetica, sans-serif;
+    color: green;
+    font-weight: 700;
+}
