--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,16 @@
 .container {
-    border: 1px solid slategray;
-    width: 80%;
-    margin: 30px 10%;
-    text-align: center;
+  border: 1px solid royalblue;
+  width: 80%;
+  margin: 30px 10%;
+  text-align: center;
+  font-family: "Segoe UI";
 }
 
-.container header {
-    background-color: blue;
-    color: white;
-    width: 100%;
-    height: 50px;
+.container .header {
+  background-color: blue;
+  color: white;
+  height: 80px;
+}
+.container .header h1 {
+  margin: 0;
 }
