--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,9 @@
   text-align: center;
   font-family: "Segoe UI";
 }
+.container p {
+  color: blue;
+}
 
 .container .header {
   background-color: blue;
