--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,36 @@
 .container {
-  border: 1px solid green;
   width: 80%;
   margin: 30px 10%;
-  text-align: center;
+  text-align: justify;
   font-family: "Segoe UI";
+  box-shadow: -1px 6px 10px -6px black;
 }
+
 .container p {
   color: blue;
 }
 
 .container .header {
+  text-align: center;
   background-color: blue;
   color: white;
   height: 80px;
 }
+
 .container .header h1 {
   margin: 0;
 }
+
 .container .header h2 {
   margin: 0;
 }
+
 footer {
   background-color: aqua;
   color: blue;
   height: 50px;
 }
+
 footer h4 {
   margin: 0;
   padding: 10px;
