--- a/css/styles.css
+++ b/css/styles.css
@@ -5,27 +5,30 @@
   text-align: center;
   font-family: "Segoe UI";
 }
-.container p {
-  color: blue;
-}
 
 .container .header {
   background-color: blue;
   color: white;
   height: 80px;
 }
+
 .container .header h1 {
   margin: 0;
 }
+
 .container .header h2 {
   margin: 0;
 }
+
 footer {
-  background-color: aqua;
-  color: blue;
-  height: 50px;
+  background-color: red;
+  color: #fff;
 }
+
 footer h4 {
   margin: 0;
-  padding: 10px;
+}
+
+footer p {
+  margin: 0;
 }
